--- a/style.css
+++ b/style.css
@@ -1,14 +1,31 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
+    background: ;
     }
-h1{
+/* h1{
     background-color: #3e815b;
     color: azure;
     box-shadow:#9bbda9;
     text-align: center;
-    font-size: 18px;
+    font-size: 25px;
+} */
+video {
+    position: fixed; /* Sticks the video to the background */
+    top: 0;
+    left: 0;
+    width: 100%; /* Covers the full width */
+    height: 100%; /* Covers the full height */
+    object-fit: cover; /* Ensures the video scales properly */
+    z-index: -1; /* Places the video behind other content */
 }
 #maindiv{
+   
     background-color: #0e2c1b;
     color: whitesmoke;
     width: auto;
